<resources>
    <string name="app_name">FlashProDownloader</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_divider">bottom_divider</string>
    <string name="home">home</string>
    <string name="download">download</string>
    <string name="complete">complete</string>
    <string name="bottom_divider_line">bottom_divider_line</string>
    <string name="logo">logo</string>
    <string name="logo_text">logo_text</string>
    <string name="menu">menu</string>
    <string name="tab">tab</string>
    <string name="tab_number">tab_number</string>
    <string name="icon">icon</string>
    <string name="search_url">Search Url</string>
    <string name="add">add</string>
    <string name="addnewtab">AddNewTab</string>
    <string name="web_image">web_image</string>
    <string name="reload">reload</string>
    <string name="add_to_bookmark">Add to Bookmark</string>
    <string name="history">History</string>
    <string name="history_not_available_yet">History Not Available Yet</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark_not_available_yet">Bookmark not available yet</string>
    <string name="bookmark">Bookmark</string>
    <string name="downloads">Downloads</string>
    <string name="new_tab">New Tab</string>
    <string name="remove">remove</string>
    <string name="no_downloads">No Downloads</string>
    <string name="back">back</string>
    <string name="delete_progress">Delete Progress</string>
    <string name="progress">Progress</string>
    <string name="no_progress">No Progress</string>
    <string name="history_not_found">History Not Found</string>
    <string name="no_bookmarks">No Bookmarks</string>
    <string name="page_title">Page title</string>
    <string name="delete_bookmark">Delete Bookmark</string>
    <string name="hello">hello</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="splash_text">splash text</string>
</resources>