<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/header"
        android:paddingHorizontal="8dp"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/logo_icon"
            android:id="@+id/logo"
            android:contentDescription="@string/logo"
            />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toEndOf="@id/logo"
            android:src="@drawable/logo_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/logo_text"
            android:id="@+id/logo_text"
            android:layout_marginStart="8dp"
            />

        <FrameLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/menu"
            android:background="?android:attr/selectableItemBackground"
            android:padding="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/side_bar_doted"
                android:contentDescription="@string/menu"
                />

        </FrameLayout>



        <FrameLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/tab"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginEnd="10dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_icon"
                android:contentDescription="@string/tab"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:contentDescription="@string/tab_number"
                android:id="@+id/tab_number"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                />
        </FrameLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/body"
        android:paddingHorizontal="15dp"
        >


        <RelativeLayout
            android:id="@+id/search_card"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/edit_text_bg"
            >

            <EditText
                android:id="@+id/search_url"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/start_drawable"
                android:drawablePadding="10dp"
                android:hint="@string/search_url"
                android:inputType="textUri" />


        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/search_card"
            android:background="@drawable/square"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="20dp"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/icon_recycler"
                />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>