<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/header"
        android:paddingHorizontal="5dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardUseCompatPadding="true"
            app:cardElevation="3dp"
            android:id="@+id/search_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tab"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/search_url"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_url"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/reload_container"
                    android:layout_marginStart="8dp"
                    android:inputType="textUri"
                    android:autofillHints="no"
                    android:textColor="@color/white"
                    />

                <FrameLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/reload_container"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:padding="5dp"
                    android:background="?android:attr/selectableItemBackground"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/reload"
                        android:id="@+id/reload"
                        android:contentDescription="@string/reload"
                        />
                </FrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:src="@drawable/side_bar_doted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/menu"
            android:id="@+id/menu"
            android:layout_marginEnd="8dp"
            />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:src="@drawable/tab_icon"
            android:backgroundTintMode="add"
            app:layout_constraintStart_toEndOf="@id/search_container"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/tab"
            android:id="@+id/tab"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            app:layout_constraintStart_toStartOf="@id/tab"
            app:layout_constraintEnd_toEndOf="@id/tab"
            app:layout_constraintTop_toTopOf="@id/tab"
            app:layout_constraintBottom_toBottomOf="@id/tab"
            android:contentDescription="@string/tab_number"
            android:id="@+id/tab_number"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ProgressBar
            android:id="@+id/pb_page_loading"
            android:padding="0.0dip"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:max="100"
            android:progressDrawable="@drawable/greenprogress"
            style="?android:progressBarStyleHorizontal"
            app:layout_constraintTop_toTopOf="parent"
            />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/webViewContainer"
            app:layout_constraintTop_toBottomOf="@id/pb_page_loading"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/download_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white_download"
            android:contentDescription="@string/downloads"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            app:borderWidth="0dp"
            android:enabled="false"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>